feat: create Alert component

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,9 @@
     --muted: 240 4.8% 95.9%;
     --muted-foreground: 240 3.8% 46.1%;
 
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 85.7% 97.3%;
+    
     --radius: 0.5rem;
   }
 
